# orm_for_mysql

./: CMakeLists.txt  library.cpp  library.h  placeholder.cpp
include/connection/: Connection.h
src/connection/: Connection.cpp
